--- a/40666960/styles.css
+++ b/40666960/styles.css
@@ -1,68 +1,146 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Sono:wght@200..800&display=swap');
+
 :root {
-    --primary-color: #79826A;
-    --secondary-color: #7D7757;
-    --background2-color: #E5D2B0;
-    --background-color: black;
-    --text-color: #252728;
-}
-.header {
-    font-size: 5rem;
-    height: 50%;
-    width: 100%;
-    text-align: center;
-    margin:auto;
-    color: var(--primary-color)
+    --dark-text: #481E14;
+    --light-text: #F8FAFC;
+    --light-blue: #A9B5DF;
 }
 
-body {
-    background-color: var(--background-color);
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+* {
     margin: 0;
-    font-family: Arial, sans-serif;
+    padding: 0;
+    box-sizing:border-box;
+    font-family: "Raleway";
 }
 
-.hero {
-    height: 100vh;
-    width: 100%;
-    background: 
-        linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0) 80%, rgba(0, 0, 0, 1)), 
-        url('imgs/dense-jungle-canopy-with-vibrant-varied-flora-hiding-mysterious-creatures-within-its-shadows.jpg') center/cover no-repeat;
+.primary-header {
+    height: 5rem;
+    width: 100vw;
+    padding: 1rem;
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: rgba( 255, 255, 255, 0 );
+    box-shadow: 0 0.5rem 2rem 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur(1rem);
+    -webkit-backdrop-filter: blur(1rem);
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+.primary-header a {
+    height: 100%;
+}
+.logo {
+    max-height: 100%;
+}
+
+.header nav {
+    max-height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.header nav ul {
+    margin: 0;
+    display: inline-flex;
+    list-style: none;
+  }
+
+.header nav li {
+    margin-right: 1rem;
+}
+
+.header nav a {
+    color: var(--dark);
+    display: inline-block;
+    text-decoration: underline;
+    text-decoration-color: #FF8A65;      /* warm‑coral */
+    text-decoration-thickness: 0.2rem;
+    text-decoration-skip-ink: none; 
+    text-underline-offset: 0.3rem;
+}
+
+.header nav a:hover {
+    transition: 0.5s;
+    transform: translateY(-2px);
+}
+
+.button {
+    max-height: 3rem;
+    font-size: 1rem;
+    padding: 1rem;
+    border: none;
+    border-radius: 0.5rem;
+    color: var(--light-text);
+    background-color: var(--light-blue);
+    box-shadow: 0 0.5rem 2rem 0 rgba( 31, 38, 135, 0.37 );
+}
+
+.button:hover {
+    transition: 0.5s;
+    transform: translateY(-2px);
 }
 
 .gallery {
-    height: 50vh;
-    width: 100%;
+    padding: 5rem;
+    width: 100vw;
+}
+#gallery-grid {
+    width: auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+    gap: 2rem;
+    padding: 1rem;
+  }
+
+.gallery-item {
+    max-width: 100%;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
-    background-color:black;
-}
-
-.profile-card {
-   width: 15rem;
-   height: 20rem;
-   margin: 1rem;
-   padding: 1rem;
-   align-items: center;
-   justify-content: center;
-   border-style: solid;
-   border-color: #252728;
-   border-radius: 1.5rem;
-   box-shadow: 0.5rem 0.5rem 1rem var(--text-color);
-   background-color: var(--text-color);
-}
-
-.card-header {
-    height: 10%;
-    width: 100%;
+    align-items: center;
+    color: var(--dark);
     text-align: center;
-    margin:auto;
-    color: var(--primary-color)
-}
+    padding: 0.5rem;
+    border-radius: 0.75rem;
+    background: rgba( 255, 255, 255, 0 );
+    box-shadow: 0 0.5rem 2rem 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur(1rem);
+    -webkit-backdrop-filter: blur(1rem);
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+  }
 
-.card-image {
-    width: 100%; 
-    height: 90%;
-    object-fit: cover;
-    border-radius: 1rem;
-    overflow: hidden;
+  .gallery-item:hover {
+    transition: 0.5s;
+    transform: translateY(0.1rem);
+    box-shadow: 0 0.5rem 2rem 0 rgba( 31, 38, 135, 0.37 );
 }
+  
+  .gallery-item h1 {
+    margin: 0 0 1rem 0;
+    max-width: 100%;
+    overflow: hidden;
+    overflow-wrap: break-word;
+    text-decoration: underline;
+    text-decoration-color: #FF8A65;      /* warm‑coral */
+    text-decoration-thickness: 0.1rem;
+    text-decoration-skip-ink: none; 
+    text-underline-offset: 0.2rem;
+  }
+  
+  .gallery-item img {
+    display:block;
+    max-width: 100%;
+    overflow: hidden;
+    object-fit: cover;
+    border-radius: 0.75rem;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+  }
