--- a/40652444_Rodents/styles.css
+++ b/40652444_Rodents/styles.css
@@ -149,3 +149,8 @@ button {
     margin: 20px auto; 
     text-align: center;
 }
+#result {
+    font-size: 1.2em; /* Adjust as needed */
+    text-align: center;
+    margin-top: 20px;
+}
