--- a/40652444_Rodents/styles.css
+++ b/40652444_Rodents/styles.css
@@ -150,7 +150,7 @@ button {
     text-align: center;
 }
 #result {
-    font-size: 1.2em; /* Adjust as needed */
+    font-size: 1.2em; 
     text-align: center;
     margin-top: 20px;
 }
