--- a/40652444_Rodents/styles.css
+++ b/40652444_Rodents/styles.css
@@ -114,14 +114,12 @@
     font-size: 1em;
 }
 
-.HomePG{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: right;
-    align-items: right; 
-    text-align: right;
-    width: 100%;
+.HomePg {
+    position: absolute; 
+    top: 10px; 
+    right: 10px; 
 }
+
 .HomePg button {
     background-color: #cd4813;
     color: white;
