--- a/40666960/style.css
+++ b/40666960/style.css
@@ -23,19 +23,20 @@
     --size-800: 2.5rem;
     --size-900: 4.5rem;
 
-    --fs-body: var(--size-300);
+    --fs-body: var(--size-400);
     --fs-primary-heading: var(--size-700);
     --fs-secondary-heading: var(--size-600);
     --fs-nav: var(--size-400);
-    --fs-button: var(--size-200);
+    --fs-button: var(--size-300);
 }
 
-@media (min-width: 60em) {
+@media (min-width: 50em) {
     :root {
-        --fs-body: var(--size-400);
+        --fs-body: var(--size-500);
         --fs-primary-heading: var(--size-900);
         --fs-secondary-heading: var(--size-800);
-        --fs-nav: var(--size-300);
+        --fs-nav: var(--size-400);
+        --fs-button: var(--size-400);
     }
 }
 
@@ -71,7 +72,7 @@ body {
 /* Set core body defaults */
 body {
   font-size: var(--fs-body);
-  font-family: var(--ff-body);
+    font-family: var(--ff-body), sans-serif;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
 }
@@ -113,10 +114,12 @@ select {
   }
 }
 
+/* GENERAL STYLES*/
+
+
 /* Button */
 .button {
   border: 1px solid;
-  display: inline-flex;
   border-radius: 100vmax;
   cursor: pointer;
   text-decoration: none;
@@ -128,33 +131,24 @@ select {
   box-shadow: 0 1em 1em -1em var(--clr-accent-900);
 }
 
-.button[data-type="inverted"] {
-  color: var(--clr-accent-900);
-  background-color: var(--clr-neutral-100);
-}
-
 .button:hover,
 .button:focus-visible {
   background-color: var(--clr-accent-400);
   box-shadow: 0 1em 1em -1em var(--clr-accent-400);
 }
 
-.button[data-type="inverted"]:hover,
-.button[data-type="inverted"]:focus-visible {
-  color: var(--clr-accent-400);
-  background-color: var(--clr-neutral-100);
-}
 
 /* Navigation */
+header .nav-list {
+    font-weight: var(--fw-semi-bold);
+}
+header .nav-list a {
+    color: var(--clr-primary-900);
+}
+
 .nav-wrapper {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-}
-
-.footer-nav-wrapper {
-  display: flex;
-  justify-content: center;
   align-items: center;
 }
 
@@ -163,26 +157,26 @@ select {
 }
 
 .nav-list {
-  font-size: var(--fs-nav);
-  display: flex;
-  gap: clamp(var(--size-400), 5vw, var(--size-600));
-  font-weight: var(--fw-semi-bold);
+    font-size: var(--fs-nav);
+    gap: clamp(var(--size-400), 5vw ,var(--size-500));
+    display: flex;
+    text-align: center;
+    font-weight: var(--fw-bold);
 }
 
 .nav-list a {
-  text-decoration: none;
-  color: var(--clr-primary-900)
+    color: var(--clr-neutral-100);
+    text-decoration: none;
 }
 
 @media (max-width: 50em) {
   .primary-nav {
     display: none;
-
     position: absolute;
     padding: var(--size-700);
     inset: 7rem var(--size-400) auto;
     background: var(--clr-accent-100);
-    border-radius: var(--size-100);
+    border-radius: var(--size-300);
     box-shadow: 0 0 0.5em rgb(0, 0, 0, 0.05);
   }
 
@@ -191,38 +185,32 @@ select {
     position: absolute;
   }
 
-  .nav-list {
-    display: grid;
-    gap: var(--size-400);
-    text-align: center;
-    font-weight: var(--fw-bold);
-  }
-
-  .nav-list a {
-    text-decoration: none;
-    color: var(--clr-neutral)
-  }
-
-  .nav-list a:hover,
-  .nav-list a:focus {
-    text-decoration: none;
-    color: var(--clr-primary);
-  }
-
   .primary-nav[data-visible] {
     display: block;
+  }
+
+  header .nav-list a {
+      color: var(--clr-neutral-100);
+      font-weight: var(--fw-bold);
+  }
+
+  .nav-list {
+      display: grid;
+      gap: var(--size-400);
   }
 
   .mobile-nav-toggle {
     display: block;
     cursor: pointer;
     background: transparent;
-    border: 0;
-    padding: 0.5em;
   }
   
   .mobile-nav-toggle .icon-closed {
     display: none;
+  }
+
+  .svg {
+      height: var(--size-700);
   }
 }
 
@@ -230,30 +218,17 @@ select {
   cursor: pointer;
   background: transparent;
   border: 0;
-  padding: 0.5em;
 }
 
 .mobile-nav-toggle .icon-closed {
   display: none;
 }
 
-.footer-navigation a {
-  color: var(--clr-neutral-100);
-}
-
-.socials-wrapper {
-  display: flex; 
-  justify-content: center;
-}
-
-.svg {
-  height: var(--size-900);
-}
 
 /* Gallery */
 .gallery {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(19em, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(17em, 1fr));
   gap: var(--size-700);
 }
 
@@ -264,7 +239,7 @@ select {
   flex-direction: column;
   border-radius: 2rem;
   overflow: hidden;
-  box-shadow: 0 1em 1em -1em var(--clr-accent-900);
+  box-shadow: 0 1em 1em -1em var(--clr-accent-400);
 }
 
 .card img {
@@ -280,6 +255,21 @@ select {
   text-align: center;
 }
 
+
+/* Footer */
+.footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: var(--size-700);
+}
+
+.socials-list {
+    display: inline-flex;
+    gap: var(--size-700);
+}
+
+
 /* Utility classes */
 .sr-only {
   position: absolute;
@@ -292,27 +282,22 @@ select {
   white-space: nowrap;
   border: 0;
 }
-.text-primary-900 {
+.text-primary-900{
     color: var(--clr-primary-900);
 }
-.text-accent-100 {
-    color: var(--clr-accent-100);
-}
-.text-neutral-100 {
+.text-neutral-100{
     color: var(--clr-neutral-100);
 }
-.text-neutral-900 {
-    color: var(--clr-neutral-);
-}
+
 .text-center {
   text-align: center;
 }
 
-.bg-primary-400 {
-    background-color: var(--clr-primary-400);
-}
 .bg-accent-100 {
     background-color: var(--clr-accent-100);
+}
+.bg-accent-400 {
+    background-color: var(--clr-accent-400);
 }
 .bg-accent-900 {
   background-color: var(--clr-accent-900);
@@ -320,7 +305,7 @@ select {
 .bg-neutral-100 {
     background-color: var(--clr-neutral-100);
 }
-.bg-neutral-900 {
+.bg-primary-900 {
     background-color: var(--clr-primary-900);
 }
 
@@ -343,13 +328,13 @@ select {
     line-height: 1.1;
 }
 .fs-300 {
-  font-size: var(--fs-300);
+  font-size: var(--size-300);
 }
 .fs-400 {
-  font-size: var(--fs-400);
+  font-size: var(--size-400);
 }
 .fs-500 {
-  font-size: var(--fs-500);
+  font-size: var(--size-500);
 }
 
 .padding-block {
@@ -374,7 +359,11 @@ select {
 }
 
 :where(.flow :not(:first-child)) {
-  margin-top: var(--flow-spacer, 2em);
+  margin-top: var(--flow-space, 2em);
+}
+
+.svg {
+    height: var(--size-900);
 }
 
 @media (min-width: 50em) {
@@ -388,17 +377,16 @@ select {
   }
 }
 
-/* Hero Section */
 @media (max-width: 50em) {
-  .padding-block {
-    padding-block: var(--size-700);
-  }
+    .padding-block {
+        padding-block: var(--size-700);
+    }
 
-  .gallery-item h1 {
-    font-size: var(--size-600);
-  }
+    .gallery-item h1 {
+        font-size: var(--size-600);
+    }
 
-  body {
-    text-align: center;
-  }
+    body {
+        text-align: center;
+    }
 }
