disable scroll chaining

--- a/40666960/style.css
+++ b/40666960/style.css
@@ -67,6 +67,9 @@ html:focus-within {
 html,
 body {
     height: 100%;
+    /* disable scroll chaining & pull-to-refresh */
+    overscroll-behavior: none;
+    overscroll-behavior-y: none;
 }
 
 /* Set core body defaults */
